# Unitree_g1_edu_control_panel

./: .gitignore  .gitmodules  README.md  UNITREE_G1_FULL_REPORT (1).docx  build.sh  test.py
V3/: BURUNOV_VOICE_INTEGRATION_REPORT.md  CHANGELOG (2).md  CHANGELOG.md  FACE_RECOGNITION_REPORT.md  ROBOT_HEAD_CONTROL.md  STT_TTS_MIC_REPORT.md  STT_TTS_OLLAMA_OPERATOR_GUIDE.docx  arm_player.cfg  convert_to_trt.py  face_recognize.py  face_recognize_trt.py  follow_oleg_only.py  g1_arm_keyframe_player  head_emotions.py  init_arms_home.py  itog_v3.py  left_arm_two_lower_fingers_test.py  nano_controller.py  oleg_embeddings.npz  phone_camera_stream.py  requirements-face.txt  run_follow_oleg_with_companion.sh  run_full_delivery_mission.sh  see_for_robot_v3.py  test.py  udp_cmd_vel_raw_bridge.py
V3/itog_v3_core/: CODE_STRUCTURE.md  v3_approach.py  v3_cli.py  v3_common.py  v3_face.py  v3_hands.py  v3_motion.py  v3_vision.py
V3/nano_led_blink/: README.md  nano_led_blink.ino
V3/sketch_jul9a/: sketch_jul9a.ino
head_unitree_custom/: README.md  platformio.ini
head_unitree_custom/src/: config.h  (+1 more)
kuzmich-cockpit/: README.md  camera.toml  requirements.txt  run.py
kuzmich-cockpit/camera/capture/: Cargo.toml  build.rs  build.sh  wrapper.h
kuzmich-cockpit/camera/capture/src/: config.rs  gstreamer.rs  main.rs  realsense.rs
voice_robot/: base.ini  conversation.py  conversation_llama.py  conversation_vllm.py  kuzmich_companion.py  kuzmich_system_prompt.txt  override.ini  override_external.ini  override_internal.ini  requirements-voice.txt  run_voice_robot.sh  speak_bluetooth.py
(+60 files in other folders)
